--- a/Presentations/ProgressIQ.IdentityServer/Areas/Admin/Views/LdapConfiguration/Index.cshtml
+++ b/Presentations/ProgressIQ.IdentityServer/Areas/Admin/Views/LdapConfiguration/Index.cshtml
@@ -19,9 +19,9 @@
 
     <div class="form-horizontal" style="margin-top: 30px;">
         <div class="form-group">
-            @Html.Label("Username",new {@class="col-md-2"})
+            @Html.Label("Email",new {@class="col-md-2"})
             <div class="col-md-10">
-                @Html.TextBox("username")
+                @Html.TextBox("email")
             </div>
         </div>
         <div class="form-group">
