--- a/Presentations/ProgressIQ.IdentityServer/Views/Home/Index.cshtml
+++ b/Presentations/ProgressIQ.IdentityServer/Views/Home/Index.cshtml
@@ -4,21 +4,20 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
-    </p>
+    <h1>ProgressIQ Identity Server</h1>
+    <p class="lead">Identity Server for bridging between Internal Ldap with ProgressIQ</p>
+    @*<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
 
 <div class="row">
     <div class="col-md-12">
-        <p>
+        @*<p>
             @Html.ActionLink(Index_cshtml.ViewWsFederationMetadata, "Generate", "FederationMetadata")
         </p>
         <p>
             @Html.ActionLink(Index_cshtml.ViewWSFederationMetadataRP, "GenerateRPMetadata", "FederationMetadata")
-        </p>
+        </p>*@
         <p>
             @Html.ActionLink(Index_cshtml.ViewWSFederationMetadataAZ, "GenerateAZMetadata", "FederationMetadata")
         </p>
